// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pane bottom pane 'should render both ExpandButtons by default 1`] = `
<Styled(Panel)
  expandState="DEFAULT"
  handleExpand={[Function]}
  paneId="BOTTOM"
>
  <styled.div>
    <Styled(ExpandButton)
      direction="DOWN"
      onClick={[Function]}
      title="expand top pane"
    />
    <Styled(ExpandButton)
      direction="UP"
      onClick={[Function]}
      title="expand bottom pane"
    />
  </styled.div>
  <Foo
    expandState="DEFAULT"
    key=".0"
  />
</Styled(Panel)>
`;

exports[`Pane bottom pane should render ExpandButton with DOWN icon if pane is expanded' 1`] = `
<Styled(Panel)
  expandState="EXPANDED"
  handleExpand={[Function]}
  paneId="BOTTOM"
>
  <styled.div>
    <Styled(ExpandButton)
      direction="DOWN"
      onClick={[Function]}
      title="expand top pane"
    />
  </styled.div>
  <Foo
    expandState="EXPANDED"
    key=".0"
  />
</Styled(Panel)>
`;

exports[`Pane bottom pane should render ExpandButton with UP icon if pane is collapsed 1`] = `
<Styled(Panel)
  expandState="COLLAPSED"
  handleExpand={[Function]}
  paneId="BOTTOM"
>
  <styled.div>
    <Styled(ExpandButton)
      direction="UP"
      onClick={[Function]}
      title="expand bottom pane"
    />
  </styled.div>
  <Foo
    expandState="COLLAPSED"
    key=".0"
  />
</Styled(Panel)>
`;

exports[`Pane should render children with expandState 1`] = `
<Styled(Panel)
  expandState="EXPANDED"
  handleExpand={[Function]}
  paneId="TOP"
>
  <Foo
    expandState="EXPANDED"
    key=".0"
  />
</Styled(Panel)>
`;

exports[`Pane top pane should not render expand buttons 1`] = `
<Styled(Panel)
  expandState="COLLAPSED"
  handleExpand={[Function]}
  paneId="TOP"
>
  <Foo
    expandState="COLLAPSED"
    key=".0"
  />
</Styled(Panel)>
`;
